atomics/pdes/jitfailure-dolfin_expression_c922c468734fec13b2ebad3ffcfed7ed/error.log
/tmp/tmp533q2b3c/dolfin_expression_c922c468734fec13b2ebad3ffcfed7ed.cpp: In member function ‘virtual void dolfin::dolfin_expression_c922c468734fec13b2ebad3ffcfed7ed::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp533q2b3c/dolfin_expression_c922c468734fec13b2ebad3ffcfed7ed.cpp:61:37: error: ‘s’ was not declared in this scope
   61 |           values[0] = sqrt(3./2*dot(s, s));
      |                                     ^
/tmp/tmp533q2b3c/dolfin_expression_c922c468734fec13b2ebad3ffcfed7ed.cpp:61:33: error: ‘dot’ was not declared in this scope
   61 |           values[0] = sqrt(3./2*dot(s, s));
      |                                 ^~~
